
Breaking Changes
================

 - `GROUP BY` now executes against the real columns and fallbacks to
   substituting possible aliases in case the columns do not exist. This will
   cause statements that used alias values that shadowed multiple columns with
   the same name to fail (eg. alias `name` in a join statement where multiple
   tables have the real column `name`). Statements with aliases that shadowed
   a real column and also retrieve that real column will no longer fail as the
   real column will be used in the `GROUP BY` clause (this will not be
   ambigous anymore).

Changes
=======

 - Change semantics of ``IN`` operator to behave like ``= ANY``. The argument
   list for ``IN`` now has to be comprised of the same type. For example,
   this is now an illegal ``IN`` query because the list mixes integer and
   double type::

     Select * from t1 where id IN (1, 1.2, 2)

   This would get translated into the following and throw an error::

     Select * from t1 where id = ANY([1, 1.2, 3])

 - Support single column subselects within the `IN` operator, e.g.::

- Introduce support for single column subselects in `ANY` and `IN`, e.g.::

    select id from t where id IN (select id from t2)

 - Improved resiliency of the table rename operation.

 - Relaxed column naming restrictions.

 - Improved resiliency of drop, close and open table operations

 - Added empty tables `KEY_COLUMN_USAGE` and `REFERENTIAL_CONSTRAINTS` to
  `INFORMATION_SCHEMA` to be more compliant with the SQL99 standard.

Fixes
=====

 - Fixed column name in output by removing new lines when select list contains
   subquery. E.g.::

     SELECT 1 =
         (SELECT 1)

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed an issue that caused queries with ``IS NULL`` or ``IS NOT NULL` on
   columns of type ``geo_point`` to fail.

 - Changed ``crate`` unix/linux startup script to use standard ``sh`` syntax
   instead of ``bash`` specific syntax.
